# coursework_fourth_module

./: main.py  pyproject.toml
src/: vacancy.py
tests/: tests.py
