[tool.poetry]
name = "coursework-fourth-module"
version = "0.1.0"
description = "HAHAHAHAHAHAHAHAHAHAHAHA.ru"
authors = ["ReaperSans28 <smileuwu321@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"


[tool.poetry.group.lint.dependencies]
black = "^24.10.0"
flake8 = "^7.1.1"
isort = "^5.13.2"
mypy = "^1.11.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
